--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <a name="documentation-of-the-capstoneswiftkey-project" class="anchor" href="#documentation-of-the-capstoneswiftkey-project"><span class="octicon octicon-link"></span></a>Documentation of the Capstone/Swiftkey Project</h3>
 
 <h1>
-<a name="author-massimo-morelli" class="anchor" href="#author-massimo-morelli"><span class="octicon octicon-link"></span></a>Author: Massimo Morelli</h1>
+<a name="author-massimo-morelli" class="anchor" href="#author-massimo-morelli">
+<a name="Final Report (html)" href="./Final_Report.html">Final Capstone Project Report(html)</a>
+<span class="octicon octicon-link"></span></a>Author: Massimo Morelli</h1>
         </section>
 
         <footer>
