--- a/index.html
+++ b/index.html
@@ -19,25 +19,20 @@
 
         <header>
           <h1>Capstone doc</h1>
-          <h2>Documentation of the capstone project</h2>
+          <h3>Documentation of the capstone project
+              <br>
+		Author: Massimo Morelli
+          </h3>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/momobo/Capstone_Doc/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/momobo/Capstone_Doc/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/momobo/Capstone_Doc" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
+  
         <hr>
 
         <section id="main_content">
-          <h3>
-<a name="documentation-of-the-capstoneswiftkey-project" class="anchor" href="#documentation-of-the-capstoneswiftkey-project"><span class="octicon octicon-link"></span></a>Documentation of the Capstone/Swiftkey Project</h3>
 
-<h1>
-<a name="author-massimo-morelli" class="anchor" href="#author-massimo-morelli">
-<a name="Final Report (html)" href="./Final_Report.html">Final Capstone Project Report(html)</a>
-<span class="octicon octicon-link"></span></a>Author: Massimo Morelli</h1>
+
+<h1><a class="anchor" name="Final Report (html)" href="./Final_Report.html">Click Here to read the report</a></h1><br>
+<h1><a class="anchor" name="Code" href="https://github.com/momobo/Capstone_Dryrun">Github repository</a></h1><br>
         </section>
 
         <footer>
